--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,54 @@
-.App {
+body {
+  background-image: url('https://www.oneyearnobeer.com/wp-content/uploads/2017/08/beer-wallpaper.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: lightblue;
   text-align: center;
+  font-size: 20px
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.homepage {
+  background-color: rgba(163, 234, 255, 0.5)
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.table, .edit {
+  background-color: rgba(163, 234, 255, 0.5);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 2%
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  background-color: rgb(46, 46, 148);
+  color: rgb(218, 66, 66);
+  border-color: rgb(46, 46, 148);
+  font-size: 25px;
+  margin: 50px
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.remove {
+  color: darkred
+}
+
+.like {
+  color: green
+}
+
+.dislike {
+  color: red
+}
+
+header {
+  background-color: rgba(163, 234, 255, 0.5);
+  text-align: center
+}
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: rgba(163, 234, 255, 0.5);
+  text-align: center
 }
