final code check

--- a/src/App.css
+++ b/src/App.css
@@ -42,11 +42,11 @@ body {
 .nav {
   background-color: rgba(163, 234, 255, 0.5);
   text-align: center;
-  padding: 1%;
+  padding: 1%
 }
 
 .fsBeer {
-  font-size: 20px;
+  font-size: 20px
 }
 
 footer {
